Fix spacing between problems and narrative text
Per @cukierm 's comment:
I think, if anything, the text should be closer to the following problem, since it often prompts students to do something in the following problem.

--- a/_sass/_lessons.scss
+++ b/_sass/_lessons.scss
@@ -112,8 +112,8 @@
   /* problem counter */
   counter-reset: problem;
 
-  /* extra line of space for a problem that follows other content */
-  * + .problem {
+  /* extra line of space between a problem an narrative text that follows it */
+  .problem + p {
     margin-top: lines(2);
   }
 
